--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h3></h3>
+        <h3>Фигур в зоне для перетаскивания: <span>0</span></h3>
     </header>
     <div class="drop"></div>
     <div class="drag"></div>
